--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
+    "axios": "^1.7.2",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
+    "react-native-blur": "^3.2.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-google-fonts": "^0.0.0",
-    "react-native-reanimated": "^3.8.0",
+    "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
